src/test/ui/const-generics/issues/issue-64494.min.stderr
error: generic parameters may not be used in const operations
  --> $DIR/issue-64494.rs:15:38
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 5}>: True {}
   |                                      ^^^^^^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error: generic parameters may not be used in const operations
  --> $DIR/issue-64494.rs:18:38
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 6}>: True {}
   |                                      ^^^^^^ cannot perform const operation using `T`
   |
   = note: type parameters may not be used in const expressions
   = help: use `#![feature(const_generics)]` and `#![feature(const_evaluatable_checked)]` to allow generic const expressions

error[E0119]: conflicting implementations of trait `MyTrait`:
  --> $DIR/issue-64494.rs:18:1
   |
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 5}>: True {}
   | ------------------------------------ first implementation here
...
LL | impl<T: Foo> MyTrait for T where Is<{T::VAL == 6}>: True {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ conflicting implementation

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0119`.
